# cuda_denoising_autoencoder

./: CMakeLists.txt  README.md  denoising.ipynb  layers.cu  layers.cuh  main.cu  utils.h
model_weights/: conv1.bias.npy  conv1.weight.npy  conv2.bias.npy  conv2.weight.npy  conv3.bias.npy  conv3.weight.npy  upconv1.bias.npy  upconv1.weight.npy  upconv2.bias.npy  upconv2.weight.npy
